--- a/Ensemble_Models/PEP_Ensemble.ipynb
+++ b/Ensemble_Models/PEP_Ensemble.ipynb
@@ -536,6 +536,9 @@
     "    optimizer = optim.Adam(model.parameters(), lr=lr)\n",
     "    model.to(device)\n",
     "\n",
+    "    train_losses = []\n",
+    "    validation_losses = []\n",
+    "\n",
     "    # Train the model\n",
     "    for epoch in range(epoch_count):\n",
     "        model.train()\n",
@@ -549,7 +552,25 @@
     "            loss.backward()\n",
     "            optimizer.step()\n",
     "            total_loss += loss.item()\n",
-    "        print(f\"Epoch {epoch + 1}/{epoch_count}, Loss: {total_loss / len(train_loader)}\")\n",
+    "        avg_loss = total_loss / len(train_loader)\n",
+    "        train_losses.append(avg_loss)\n",
+    "\n",
+    "        model.eval()\n",
+    "        with torch.no_grad():\n",
+    "            X_test_tensor = X_test.clone().detach().to(device).view(-1, time_step, 1)\n",
+    "            y_test_pred = model(X_test_tensor)[:, -1, -1]\n",
+    "            val_loss = criterion(y_test_pred, y_test.to(device)).item()\n",
+    "            validation_losses.append(val_loss)\n",
+    "\n",
+    "\n",
+    "    plt.figure()\n",
+    "    plt.plot(range(1, epoch_count + 1), train_losses, label='Training Loss')\n",
+    "    plt.plot(range(1, epoch_count + 1), validation_losses, label='Validation Loss', linestyle='--')\n",
+    "    plt.xlabel('Epochs')\n",
+    "    plt.ylabel('Loss')\n",
+    "    plt.title(f'Loss Curve (lr={lr}, batch_size={batch_size}, time_steps={time_step}, epoch={epoch_count})')\n",
+    "    plt.legend()\n",
+    "    plt.show()\n",
     "\n",
     "    # Test mode and prediction\n",
     "    model.eval()\n",
