--- a/Ensemble_Models/GOOGL_Ensemble.ipynb
+++ b/Ensemble_Models/GOOGL_Ensemble.ipynb
@@ -378,7 +378,7 @@
     "    model.to(device)\n",
     "\n",
     "    # Store loss values for plotting\n",
-    "    epoch_losses = []\n",
+    "    train_losses = []\n",
     "    validation_losses = []\n",
     "\n",
     "    # Train the model\n",
@@ -397,7 +397,7 @@
     "        \n",
     "        # Store average loss for current epoch\n",
     "        avg_loss = total_loss / len(train_loader)\n",
-    "        epoch_losses.append(avg_loss)\n",
+    "        train_losses.append(avg_loss)\n",
     "\n",
     "        # Validation phase (using test set as validation)\n",
     "        model.eval()\n",
@@ -411,7 +411,7 @@
     "\n",
     "    # Plot the training loss curve\n",
     "    plt.figure()\n",
-    "    plt.plot(range(1, epoch_count + 1), epoch_losses, label='Training Loss')\n",
+    "    plt.plot(range(1, epoch_count + 1), train_losses, label='Training Loss')\n",
     "    plt.plot(range(1, epoch_count + 1), validation_losses, label='Validation Loss', linestyle='--')\n",
     "    plt.xlabel('Epochs')\n",
     "    plt.ylabel('Loss')\n",
