plot writing fix.

--- a/Ensemble_Models/TMUS_Ensemble.ipynb
+++ b/Ensemble_Models/TMUS_Ensemble.ipynb
@@ -768,11 +768,11 @@
     "df['Date'] = pd.to_datetime(df['Date'])\n",
     "df.set_index('Date', inplace=True)\n",
     "plt.figure(figsize=(10, 6))\n",
-    "plt.plot(df.index, df['Total_Value'], color='blue', label='Mamba')\n",
+    "plt.plot(df.index, df['Total_Value'], color='blue', label='Ensemble Mamba')\n",
     "plt.plot(df.index, df['BH_Value'], color='red', label='BaH')\n",
     "plt.xlabel('Day')\n",
     "plt.ylabel('Capital ($)')\n",
-    "plt.title('Comparison of Buy & Hold and Mamba Model Strategies')\n",
+    "plt.title('Comparison of Buy & Hold and Ensemble Mamba Model Strategies')\n",
     "plt.gca().xaxis.set_major_locator(mdates.DayLocator(interval=15)) \n",
     "plt.gca().xaxis.set_major_formatter(mdates.DateFormatter('%Y-%m-%d'))  \n",
     "plt.xticks(rotation=45)  \n",
