--- a/Models/PEP_Model.ipynb
+++ b/Models/PEP_Model.ipynb
@@ -444,6 +444,8 @@
     "criterion = nn.MSELoss()\n",
     "optimizer = optim.Adam(model.parameters(), lr=0.0001)\n",
     "print(model)\n",
+    "# This line is added to reload the well-performing initialization weights; if you'd like to try different starting points, you can comment it out.\n",
+    "# Doing so may lead to different performance results.\n",
     "model.load_state_dict(torch.load('initial_weights_pep.pth'))"
    ]
   },
