ensemble for amzn

--- a/Ensemble_Models/AMZN/Weak_3.ipynb
+++ b/Ensemble_Models/AMZN/Weak_3.ipynb
@@ -791,6 +791,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Binary sonuçlar Weak_3_binary_results.csv dosyasına kaydedildi.\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_test_binary = y_test_binary.reshape(-1)  \n",
+    "y_pred_binary = y_pred_binary.reshape(-1)\n",
+    "df_binary = pd.DataFrame({'y_test_binary': y_test_binary, 'y_pred_binary': y_pred_binary})\n",
+    "model_name = \"Weak_3\" \n",
+    "df_binary.to_csv(f'{model_name}_binary_results.csv', index=False)\n",
+    "print(f\"Binary sonuçlar {model_name}_binary_results.csv dosyasına kaydedildi.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Accuracy: 0.58\n",
       "Precision: 0.58\n",
       "Recall: 0.68\n",
@@ -815,7 +837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -840,7 +862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -878,7 +900,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -893,7 +915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -919,7 +941,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1009,7 +1031,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1029,7 +1051,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
