--- a/Ensemble_Models/TMUS/Grid_Search_TMUS.ipynb
+++ b/Ensemble_Models/TMUS/Grid_Search_TMUS.ipynb
@@ -283,21 +283,100 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model 0: F1 Score = 0.55\n",
-      "Model 1: F1 Score = 0.55\n",
-      "Model 2: F1 Score = 0.52\n",
+      "Model 0: F1 Score = 0.52\n",
+      "Model 1: F1 Score = 0.53\n",
+      "Model 2: F1 Score = 0.58\n",
       "Model 3: F1 Score = 0.53\n",
-      "Model 4: F1 Score = 0.51\n",
-      "Model 5: F1 Score = 0.53\n",
-      "Early stopping at epoch 95\n",
-      "Model 6: F1 Score = 0.53\n",
-      "Early stopping at epoch 85\n",
-      "Model 7: F1 Score = 0.52\n",
-      "Model 8: F1 Score = 0.47\n",
-      "Early stopping at epoch 100\n",
-      "Model 9: F1 Score = 0.52\n",
-      "Model 10: F1 Score = 0.53\n",
-      "Model 11: F1 Score = 0.50\n"
+      "Early stopping at epoch 94\n",
+      "Model 4: F1 Score = 0.56\n",
+      "Early stopping at epoch 81\n",
+      "Model 5: F1 Score = 0.49\n",
+      "Model 6: F1 Score = 0.55\n",
+      "Early stopping at epoch 82\n",
+      "Model 7: F1 Score = 0.51\n",
+      "Model 8: F1 Score = 0.53\n",
+      "Model 9: F1 Score = 0.51\n",
+      "Model 10: F1 Score = 0.56\n",
+      "Model 11: F1 Score = 0.51\n",
+      "Model 12: F1 Score = 0.52\n",
+      "Model 13: F1 Score = 0.49\n",
+      "Model 14: F1 Score = 0.56\n",
+      "Model 15: F1 Score = 0.53\n",
+      "Early stopping at epoch 77\n",
+      "Model 16: F1 Score = 0.50\n",
+      "Early stopping at epoch 86\n",
+      "Model 17: F1 Score = 0.46\n",
+      "Early stopping at epoch 92\n",
+      "Model 18: F1 Score = 0.54\n",
+      "Model 19: F1 Score = 0.57\n",
+      "Early stopping at epoch 56\n",
+      "Model 20: F1 Score = 0.51\n",
+      "Early stopping at epoch 59\n",
+      "Model 21: F1 Score = 0.45\n",
+      "Early stopping at epoch 57\n",
+      "Model 22: F1 Score = 0.52\n",
+      "Early stopping at epoch 58\n",
+      "Model 23: F1 Score = 0.51\n",
+      "Model 24: F1 Score = 0.50\n",
+      "Model 25: F1 Score = 0.53\n",
+      "Model 26: F1 Score = 0.57\n",
+      "Early stopping at epoch 98\n",
+      "Model 27: F1 Score = 0.54\n",
+      "Early stopping at epoch 73\n",
+      "Model 28: F1 Score = 0.54\n",
+      "Early stopping at epoch 79\n",
+      "Model 29: F1 Score = 0.51\n",
+      "Early stopping at epoch 90\n",
+      "Model 30: F1 Score = 0.49\n",
+      "Early stopping at epoch 79\n",
+      "Model 31: F1 Score = 0.52\n",
+      "Model 32: F1 Score = 0.55\n",
+      "Model 33: F1 Score = 0.48\n",
+      "Model 34: F1 Score = 0.57\n",
+      "Model 35: F1 Score = 0.50\n",
+      "Early stopping at epoch 96\n",
+      "Model 36: F1 Score = 0.48\n",
+      "Early stopping at epoch 97\n",
+      "Model 37: F1 Score = 0.52\n",
+      "Early stopping at epoch 87\n",
+      "Model 38: F1 Score = 0.52\n",
+      "Early stopping at epoch 88\n",
+      "Model 39: F1 Score = 0.53\n",
+      "Model 40: F1 Score = 0.48\n",
+      "Model 41: F1 Score = 0.54\n",
+      "Model 42: F1 Score = 0.49\n",
+      "Model 43: F1 Score = 0.53\n",
+      "Model 44: F1 Score = 0.51\n",
+      "Model 45: F1 Score = 0.45\n",
+      "Model 46: F1 Score = 0.54\n",
+      "Model 47: F1 Score = 0.50\n",
+      "Early stopping at epoch 91\n",
+      "Model 48: F1 Score = 0.52\n",
+      "Early stopping at epoch 89\n",
+      "Model 49: F1 Score = 0.49\n",
+      "Model 50: F1 Score = 0.50\n",
+      "Early stopping at epoch 74\n",
+      "Model 51: F1 Score = 0.50\n",
+      "Early stopping at epoch 72\n",
+      "Model 52: F1 Score = 0.51\n",
+      "Early stopping at epoch 60\n",
+      "Model 53: F1 Score = 0.46\n",
+      "Early stopping at epoch 63\n",
+      "Model 54: F1 Score = 0.51\n",
+      "Early stopping at epoch 53\n",
+      "Model 55: F1 Score = 0.48\n",
+      "Model 56: F1 Score = 0.50\n",
+      "Model 57: F1 Score = 0.54\n",
+      "Model 58: F1 Score = 0.53\n",
+      "Model 59: F1 Score = 0.50\n",
+      "Early stopping at epoch 86\n",
+      "Model 60: F1 Score = 0.52\n",
+      "Early stopping at epoch 73\n",
+      "Model 61: F1 Score = 0.52\n",
+      "Early stopping at epoch 89\n",
+      "Model 62: F1 Score = 0.50\n",
+      "Early stopping at epoch 81\n",
+      "Model 63: F1 Score = 0.49\n"
      ]
     }
    ],
@@ -425,18 +504,70 @@
      "text": [
       "Hiperparametre Sonuçları:\n",
       "---------------------------------\n",
-      "Params: (20, 5e-05, 100, 32, 32, 16, 2), F1 Score: 0.55, Initial Weights: initial_weights_model_0.pth\n",
-      "Params: (20, 5e-05, 100, 32, 32, 16, 3), F1 Score: 0.55, Initial Weights: initial_weights_model_1.pth\n",
-      "Params: (20, 5e-05, 100, 32, 32, 8, 2), F1 Score: 0.52, Initial Weights: initial_weights_model_2.pth\n",
-      "Params: (20, 5e-05, 100, 32, 32, 8, 3), F1 Score: 0.53, Initial Weights: initial_weights_model_3.pth\n",
-      "Params: (20, 5e-05, 100, 32, 32, 4, 2), F1 Score: 0.51, Initial Weights: initial_weights_model_4.pth\n",
-      "Params: (20, 5e-05, 100, 32, 32, 4, 3), F1 Score: 0.53, Initial Weights: initial_weights_model_5.pth\n",
-      "Params: (20, 5e-05, 100, 32, 64, 16, 2), F1 Score: 0.53, Initial Weights: initial_weights_model_6.pth\n",
-      "Params: (20, 5e-05, 100, 32, 64, 16, 3), F1 Score: 0.52, Initial Weights: initial_weights_model_7.pth\n",
-      "Params: (20, 5e-05, 100, 32, 64, 8, 2), F1 Score: 0.47, Initial Weights: initial_weights_model_8.pth\n",
-      "Params: (20, 5e-05, 100, 32, 64, 8, 3), F1 Score: 0.52, Initial Weights: initial_weights_model_9.pth\n",
-      "Params: (20, 5e-05, 100, 32, 64, 4, 2), F1 Score: 0.53, Initial Weights: initial_weights_model_10.pth\n",
-      "Params: (20, 5e-05, 100, 32, 64, 4, 3), F1 Score: 0.50, Initial Weights: initial_weights_model_11.pth\n"
+      "Params: (10, 5e-05, 100, 32, 32, 16, 2), F1 Score: 0.52, Initial Weights: initial_weights_model_0.pth\n",
+      "Params: (10, 5e-05, 100, 32, 32, 16, 3), F1 Score: 0.53, Initial Weights: initial_weights_model_1.pth\n",
+      "Params: (10, 5e-05, 100, 32, 32, 8, 2), F1 Score: 0.58, Initial Weights: initial_weights_model_2.pth\n",
+      "Params: (10, 5e-05, 100, 32, 32, 8, 3), F1 Score: 0.53, Initial Weights: initial_weights_model_3.pth\n",
+      "Params: (10, 5e-05, 100, 32, 64, 16, 2), F1 Score: 0.56, Initial Weights: initial_weights_model_4.pth\n",
+      "Params: (10, 5e-05, 100, 32, 64, 16, 3), F1 Score: 0.49, Initial Weights: initial_weights_model_5.pth\n",
+      "Params: (10, 5e-05, 100, 32, 64, 8, 2), F1 Score: 0.55, Initial Weights: initial_weights_model_6.pth\n",
+      "Params: (10, 5e-05, 100, 32, 64, 8, 3), F1 Score: 0.51, Initial Weights: initial_weights_model_7.pth\n",
+      "Params: (10, 5e-05, 100, 64, 32, 16, 2), F1 Score: 0.53, Initial Weights: initial_weights_model_8.pth\n",
+      "Params: (10, 5e-05, 100, 64, 32, 16, 3), F1 Score: 0.51, Initial Weights: initial_weights_model_9.pth\n",
+      "Params: (10, 5e-05, 100, 64, 32, 8, 2), F1 Score: 0.56, Initial Weights: initial_weights_model_10.pth\n",
+      "Params: (10, 5e-05, 100, 64, 32, 8, 3), F1 Score: 0.51, Initial Weights: initial_weights_model_11.pth\n",
+      "Params: (10, 5e-05, 100, 64, 64, 16, 2), F1 Score: 0.52, Initial Weights: initial_weights_model_12.pth\n",
+      "Params: (10, 5e-05, 100, 64, 64, 16, 3), F1 Score: 0.49, Initial Weights: initial_weights_model_13.pth\n",
+      "Params: (10, 5e-05, 100, 64, 64, 8, 2), F1 Score: 0.56, Initial Weights: initial_weights_model_14.pth\n",
+      "Params: (10, 5e-05, 100, 64, 64, 8, 3), F1 Score: 0.53, Initial Weights: initial_weights_model_15.pth\n",
+      "Params: (10, 0.0001, 100, 32, 32, 16, 2), F1 Score: 0.50, Initial Weights: initial_weights_model_16.pth\n",
+      "Params: (10, 0.0001, 100, 32, 32, 16, 3), F1 Score: 0.46, Initial Weights: initial_weights_model_17.pth\n",
+      "Params: (10, 0.0001, 100, 32, 32, 8, 2), F1 Score: 0.54, Initial Weights: initial_weights_model_18.pth\n",
+      "Params: (10, 0.0001, 100, 32, 32, 8, 3), F1 Score: 0.57, Initial Weights: initial_weights_model_19.pth\n",
+      "Params: (10, 0.0001, 100, 32, 64, 16, 2), F1 Score: 0.51, Initial Weights: initial_weights_model_20.pth\n",
+      "Params: (10, 0.0001, 100, 32, 64, 16, 3), F1 Score: 0.45, Initial Weights: initial_weights_model_21.pth\n",
+      "Params: (10, 0.0001, 100, 32, 64, 8, 2), F1 Score: 0.52, Initial Weights: initial_weights_model_22.pth\n",
+      "Params: (10, 0.0001, 100, 32, 64, 8, 3), F1 Score: 0.51, Initial Weights: initial_weights_model_23.pth\n",
+      "Params: (10, 0.0001, 100, 64, 32, 16, 2), F1 Score: 0.50, Initial Weights: initial_weights_model_24.pth\n",
+      "Params: (10, 0.0001, 100, 64, 32, 16, 3), F1 Score: 0.53, Initial Weights: initial_weights_model_25.pth\n",
+      "Params: (10, 0.0001, 100, 64, 32, 8, 2), F1 Score: 0.57, Initial Weights: initial_weights_model_26.pth\n",
+      "Params: (10, 0.0001, 100, 64, 32, 8, 3), F1 Score: 0.54, Initial Weights: initial_weights_model_27.pth\n",
+      "Params: (10, 0.0001, 100, 64, 64, 16, 2), F1 Score: 0.54, Initial Weights: initial_weights_model_28.pth\n",
+      "Params: (10, 0.0001, 100, 64, 64, 16, 3), F1 Score: 0.51, Initial Weights: initial_weights_model_29.pth\n",
+      "Params: (10, 0.0001, 100, 64, 64, 8, 2), F1 Score: 0.49, Initial Weights: initial_weights_model_30.pth\n",
+      "Params: (10, 0.0001, 100, 64, 64, 8, 3), F1 Score: 0.52, Initial Weights: initial_weights_model_31.pth\n",
+      "Params: (20, 5e-05, 100, 32, 32, 16, 2), F1 Score: 0.55, Initial Weights: initial_weights_model_32.pth\n",
+      "Params: (20, 5e-05, 100, 32, 32, 16, 3), F1 Score: 0.48, Initial Weights: initial_weights_model_33.pth\n",
+      "Params: (20, 5e-05, 100, 32, 32, 8, 2), F1 Score: 0.57, Initial Weights: initial_weights_model_34.pth\n",
+      "Params: (20, 5e-05, 100, 32, 32, 8, 3), F1 Score: 0.50, Initial Weights: initial_weights_model_35.pth\n",
+      "Params: (20, 5e-05, 100, 32, 64, 16, 2), F1 Score: 0.48, Initial Weights: initial_weights_model_36.pth\n",
+      "Params: (20, 5e-05, 100, 32, 64, 16, 3), F1 Score: 0.52, Initial Weights: initial_weights_model_37.pth\n",
+      "Params: (20, 5e-05, 100, 32, 64, 8, 2), F1 Score: 0.52, Initial Weights: initial_weights_model_38.pth\n",
+      "Params: (20, 5e-05, 100, 32, 64, 8, 3), F1 Score: 0.53, Initial Weights: initial_weights_model_39.pth\n",
+      "Params: (20, 5e-05, 100, 64, 32, 16, 2), F1 Score: 0.48, Initial Weights: initial_weights_model_40.pth\n",
+      "Params: (20, 5e-05, 100, 64, 32, 16, 3), F1 Score: 0.54, Initial Weights: initial_weights_model_41.pth\n",
+      "Params: (20, 5e-05, 100, 64, 32, 8, 2), F1 Score: 0.49, Initial Weights: initial_weights_model_42.pth\n",
+      "Params: (20, 5e-05, 100, 64, 32, 8, 3), F1 Score: 0.53, Initial Weights: initial_weights_model_43.pth\n",
+      "Params: (20, 5e-05, 100, 64, 64, 16, 2), F1 Score: 0.51, Initial Weights: initial_weights_model_44.pth\n",
+      "Params: (20, 5e-05, 100, 64, 64, 16, 3), F1 Score: 0.45, Initial Weights: initial_weights_model_45.pth\n",
+      "Params: (20, 5e-05, 100, 64, 64, 8, 2), F1 Score: 0.54, Initial Weights: initial_weights_model_46.pth\n",
+      "Params: (20, 5e-05, 100, 64, 64, 8, 3), F1 Score: 0.50, Initial Weights: initial_weights_model_47.pth\n",
+      "Params: (20, 0.0001, 100, 32, 32, 16, 2), F1 Score: 0.52, Initial Weights: initial_weights_model_48.pth\n",
+      "Params: (20, 0.0001, 100, 32, 32, 16, 3), F1 Score: 0.49, Initial Weights: initial_weights_model_49.pth\n",
+      "Params: (20, 0.0001, 100, 32, 32, 8, 2), F1 Score: 0.50, Initial Weights: initial_weights_model_50.pth\n",
+      "Params: (20, 0.0001, 100, 32, 32, 8, 3), F1 Score: 0.50, Initial Weights: initial_weights_model_51.pth\n",
+      "Params: (20, 0.0001, 100, 32, 64, 16, 2), F1 Score: 0.51, Initial Weights: initial_weights_model_52.pth\n",
+      "Params: (20, 0.0001, 100, 32, 64, 16, 3), F1 Score: 0.46, Initial Weights: initial_weights_model_53.pth\n",
+      "Params: (20, 0.0001, 100, 32, 64, 8, 2), F1 Score: 0.51, Initial Weights: initial_weights_model_54.pth\n",
+      "Params: (20, 0.0001, 100, 32, 64, 8, 3), F1 Score: 0.48, Initial Weights: initial_weights_model_55.pth\n",
+      "Params: (20, 0.0001, 100, 64, 32, 16, 2), F1 Score: 0.50, Initial Weights: initial_weights_model_56.pth\n",
+      "Params: (20, 0.0001, 100, 64, 32, 16, 3), F1 Score: 0.54, Initial Weights: initial_weights_model_57.pth\n",
+      "Params: (20, 0.0001, 100, 64, 32, 8, 2), F1 Score: 0.53, Initial Weights: initial_weights_model_58.pth\n",
+      "Params: (20, 0.0001, 100, 64, 32, 8, 3), F1 Score: 0.50, Initial Weights: initial_weights_model_59.pth\n",
+      "Params: (20, 0.0001, 100, 64, 64, 16, 2), F1 Score: 0.52, Initial Weights: initial_weights_model_60.pth\n",
+      "Params: (20, 0.0001, 100, 64, 64, 16, 3), F1 Score: 0.52, Initial Weights: initial_weights_model_61.pth\n",
+      "Params: (20, 0.0001, 100, 64, 64, 8, 2), F1 Score: 0.50, Initial Weights: initial_weights_model_62.pth\n",
+      "Params: (20, 0.0001, 100, 64, 64, 8, 3), F1 Score: 0.49, Initial Weights: initial_weights_model_63.pth\n"
      ]
     }
    ],
